--- a/src/main/resources/Templates/School/Subject/ScoreCard/addFormScoreCard.html
+++ b/src/main/resources/Templates/School/Subject/ScoreCard/addFormScoreCard.html
@@ -109,6 +109,19 @@
                 </ul>
             </div>
         </div>
+        <div class="mb-1">
+            <label class="form-label">Semester: </label>
+            <select th:field="*{semester}" required>
+                <option value="None">--Select Semester--</option>
+                <option th:value="1">1</option>
+                <option th:value="2">2</option>
+            </select>
+            <div th:if="${#fields.hasErrors('semester')}">
+                <ul>
+                    <li th:each="error: ${#fields.hasErrors('semester')}" th:text="${error}"></li>
+                </ul>
+            </div>
+        </div>
         <div class="form-floating mb-1">
             <input type="number" th:field="*{score}" placeholder="Input Score" min="0.0" step="0.1" max="10"
                    class="form-control" required>
