--- a/src/main/resources/Templates/User/indexUser.html
+++ b/src/main/resources/Templates/User/indexUser.html
@@ -74,12 +74,13 @@
         <div>
             <div>
                 <a class="btn btn-primary" th:href="@{/m-user/showFormAddUser}">Add User</a>
-                <a class="btn btn-primary" th:href="@{/event/backHomepage}">Return Home</a>
+                <a class="btn btn-primary" th:href="@{/backHomepage}">Return Home</a>
             </div>
         </div>
     </div>
 </div>
 </body>
+
 <script src="/JavaScript/function.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
