--- a/src/main/resources/Templates/User/addFormUser.html
+++ b/src/main/resources/Templates/User/addFormUser.html
@@ -31,6 +31,7 @@
                     <option th:value="Teacher">Teacher</option>
                 </select>
             </div>
+
             <!--       The Fields input will be displayed after the Position selected-->
             <!--START common fields-->
             <div id="common-fields">
@@ -70,7 +71,7 @@
                 <button class="btn btn-primary py-2" type="submit">Register</button>
                 <a class="btn btn-primary py-2" th:href="@{/showLoginPage}">Return Login</a>
                 <div sec:authorize="isAuthenticated()">
-                    <a sec:authorize="hasAnyRole('ADMIN', 'MANAGER')" class="btn btn-primary py-2" th:href="@{/m-user/showManageUser}">UserList Manage</a>
+                    <a sec:authorize="hasAnyRole('ADMIN', 'MANAGER')" class="btn btn-primary py-2" th:href="@{/m-user/auth/showManageUser}">UserList Manage</a>
                 </div>
             </div>
         </form>
