--- a/src/main/resources/Templates/login.html
+++ b/src/main/resources/Templates/login.html
@@ -54,13 +54,13 @@
             </div>
         </div>
         <!-- User name -->
-        <div class="form-outline mb-4">
+        <div class="form-floating mb-4">
             <input type="text" name="username" id="form2Example1" class="form-control"/>
             <label class="form-label" for="form2Example1">Account Name</label>
         </div>
 
         <!-- Password input -->
-        <div class="form-outline mb-4">
+        <div class="form-floating mb-4">
             <input type="password" name="password" id="form2Example2" class="form-control"/>
             <label class="form-label" for="form2Example2">Password</label>
         </div>
